# haskell-homelib

./: homelib.cabal
src/Data/: Memoize.hs
src/Numeric/: Field.hs  Matrix.hs  Polynomial.hs  Primes.hs
src/Numeric/Field/: Classes.hs  GenPrimeField.hs  PrimeFields.hs
src/Numeric/Matrix/: Classes.hs  DefaultMatrices.hs  GenMatrix.hs
src/Numeric/Ring/: Classes.hs  GenNaturalRing.hs  NaturalRings.hs
